# rust-ansible-ui

./: .gitignore  CODE_AUDIT.md  CODE_QUALITY_SECURITY_REVIEW.md  MEMORY_SECURITY_BUG_AUDIT.md  README.md  SECURITY_AND_BUG_AUDIT.md  package.json
deploy/: ansible-ui.service
deploy/lighttpd/: 90-ansible-ui.conf
deploy/nginx/: ansible-ui.conf
scripts/: install-linux.sh
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: crud.rs  db.rs  git_support.rs  lib.rs  main.rs  playbook_discovery.rs  runner.rs  scheduler.rs  schemas.rs  secrets.rs  server.rs  server_main.rs  ssh_deployer.rs
static/: index.html
static/css/: style.css
static/js/: app.js
